# jig

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bootstrap.md
.forgejo/workflows/: ci.yml
crates/jig-core/: Cargo.toml
crates/jig-core/src/: lib.rs  request.rs  script_file.rs
crates/jig-core/src/conform/: diff.rs  grammar.rs  mask.rs  mod.rs  template.rs
crates/jig-core/src/parse/: anthropic.rs  codex.rs  mod.rs  openai.rs  sse.rs
crates/jig-core/src/render/: anthropic.rs  codex.rs  mod.rs  openai.rs
crates/jig-core/tests/: anthropic_conformance.rs  codex_conformance.rs  openai_conformance.rs  pi_sdk_conformance.rs
crates/jig-oracle/: Cargo.toml
crates/jig-oracle/examples/: pi_subject_record.rs
crates/jig-oracle/src/: lib.rs
crates/jig-oracle/tests/: oracle.rs  pi_subject_record.rs
crates/jig-oracle/tests/support/: anthropic_oauth.rs  auth.rs  mod.rs  subject.rs
crates/jig-record/: Cargo.toml  README.md  record.env.example
crates/jig-record/examples/: capture.rs  codex_capture.rs  openai_capture.rs
crates/jig-record/examples/shared/: pump.rs
crates/jig-record/src/: fixture.rs  lib.rs  proxy.rs  pump.rs  redact.rs  route.rs
crates/jig-runtime/: Cargo.toml
crates/jig-runtime/src/: io.rs  lib.rs
crates/jig-server/: Cargo.toml
crates/jig-server/src/: lib.rs  server.rs
crates/jig-server/tests/: anthropic_dialect.rs  codex_dialect.rs  m2_scripts.rs  m5_tool_calls.rs  m6_script_file.rs  openai_dialect.rs
crates/jig-server/tests/support/: mod.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: derive.rs  driver.rs  lib.rs  main.rs  matrix.rs  staleness.rs
docs/explanation/: record-and-conform.md  repository-layout.md
docs/how-to/: refresh-fixtures.md
fixtures/anthropic/parallel-tool-calls/: drive-shape.json  request.template.json  response.template.json
fixtures/anthropic/parallel-tool-calls/recordings/claude-code/: meta.json  request.json  response.headers  response.sse
fixtures/anthropic/single-text/: drive-shape.json  request.template.json  response.template.json
fixtures/anthropic/single-text/recordings/claude-code/: meta.json  request.json  response.headers  response.sse
fixtures/anthropic/thinking-text/: drive-shape.json  request.template.json
fixtures/anthropic/thinking-text/recordings/claude-code/: meta.json  request.json  response.headers  response.sse
fixtures/anthropic/tool-call/: drive-shape.json  request.template.json  response.template.json
fixtures/anthropic/tool-call/recordings/claude-code/: meta.json  request.json  response.headers  response.sse
fixtures/anthropic/tool-result-final/: drive-shape.json  request.template.json
fixtures/anthropic/tool-result-final/recordings/claude-code/: meta.json  request.json  response.headers  response.sse
fixtures/codex/parallel-tool-calls/recordings/pi-sdk/: meta.json  request.json  response.headers  response.sse
fixtures/codex/single-text/: drive-shape.json  request.template.json  response.template.json
fixtures/codex/single-text/recordings/codex/: meta.json  request.json  response.headers  response.sse
fixtures/codex/single-text/recordings/pi-sdk/: meta.json  request.json  response.headers  response.sse
fixtures/codex/thinking-text/: drive-shape.json  request.template.json
fixtures/codex/thinking-text/recordings/codex/: meta.json  request.json  response.headers  response.sse
fixtures/codex/tool-call/: drive-shape.json  request.template.json  response.template.json
fixtures/codex/tool-call/recordings/codex/: meta.json  request.json  response.headers  response.sse
fixtures/codex/tool-call/recordings/pi-sdk/: meta.json  request.json  response.headers  response.sse
fixtures/codex/tool-result-final/: drive-shape.json  request.template.json
fixtures/codex/tool-result-final/recordings/codex/: meta.json  request.json  response.headers  response.sse
fixtures/codex/tool-result-final/recordings/pi-sdk/: meta.json  request.json  response.headers  response.sse
fixtures/openai/parallel-tool-calls/: drive-shape.json  request.template.json  response.template.json
fixtures/openai/parallel-tool-calls/recordings/openai-sdk/: meta.json  request.json  response.headers  response.sse
fixtures/openai/parallel-tool-calls/recordings/pi-sdk/: meta.json  request.json  response.headers  response.sse
fixtures/openai/single-text/: drive-shape.json  request.template.json  response.template.json
fixtures/openai/single-text/recordings/openai-sdk/: meta.json  request.json  response.headers  response.sse
fixtures/openai/single-text/recordings/pi-sdk/: meta.json  request.json  response.headers  response.sse
fixtures/openai/tool-call/: drive-shape.json  request.template.json  response.template.json
fixtures/openai/tool-call/recordings/openai-sdk/: meta.json  request.json  response.headers  response.sse
fixtures/openai/tool-call/recordings/pi-sdk/: meta.json  request.json  response.headers  response.sse
fixtures/openai/tool-result-final/: drive-shape.json  request.template.json
fixtures/openai/tool-result-final/recordings/openai-sdk/: meta.json  request.json  response.headers  response.sse
fixtures/openai/tool-result-final/recordings/pi-sdk/: meta.json  request.json  response.headers  response.sse
src/: main.rs
