[workspace]
members = ["crates/jig-core", "crates/jig-server", "crates/jig-record", "crates/jig-oracle", "crates/xtask"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "http://localhost:3000/ai/jig"

[workspace.dependencies]
jig-core = { path = "crates/jig-core" }
jig-server = { path = "crates/jig-server" }
jig-record = { path = "crates/jig-record" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false }

[package]
name = "jig"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A fake LLM provider for end-to-end testing"
default-run = "jig"

[[bin]]
name = "jig"
path = "src/main.rs"

[dependencies]
jig-core.workspace = true
jig-server.workspace = true
jig-record.workspace = true
