[workspace]
members = ["crates/jig-core", "crates/jig-runtime", "crates/jig-server", "crates/jig-record", "crates/xtask"]
# The root manifest is also the `jig` [package], so without this a bare
# `cargo test` / `cargo nextest run` from the root would select only the
# root binary (which has no tests). Default to the whole workspace.
default-members = [".", "crates/jig-core", "crates/jig-runtime", "crates/jig-server", "crates/jig-record", "crates/xtask"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "http://localhost:3000/ai/jig"

[workspace.dependencies]
jig-core = { path = "crates/jig-core" }
jig-runtime = { path = "crates/jig-runtime" }
jig-server = { path = "crates/jig-server" }
jig-record = { path = "crates/jig-record" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skein = { path = "../skein/crates/skein" }

[package]
name = "jig"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A fake LLM provider for end-to-end testing"
default-run = "jig"

[[bin]]
name = "jig"
path = "src/main.rs"

[dependencies]
jig-core.workspace = true
jig-server.workspace = true
jig-record.workspace = true
