[package]
name = "jig-oracle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "pi-SDK ↔ jig: the offline oracle (drive pi_agent_rust directly against jig, no network/credentials) plus the pi-SDK subject recording track's test-only support code (issue #17)"

# This crate carries no *library* runtime code. Its whole job is the integration
# tests/examples under `tests/`: the offline oracle and the (manual, online)
# pi-SDK recording harness. The heavy SDK dependency lives in `dev-dependencies`
# so nothing depends on it transitively — only `cargo test`/`cargo build
# --tests` pulls it in, keeping the library runtime-free.
[dependencies]

[dev-dependencies]
jig-core.workspace = true
jig-server.workspace = true
jig-record.workspace = true
serde.workspace = true
serde_json.workspace = true
# The recording harness writes timestamped recordings and the Anthropic
# workaround mints fresh per-request UUIDs (Claude Code's session/request ids),
# matching the real client's wire shape. Already in the lock via the SDK.
uuid = { version = "1", features = ["v4"] }
# The recorder's blocking entry points and the harness's concurrent accept loop
# both want a real tokio runtime; the recorder library already pins these
# features, the multi-thread flavor is for the concurrent capture leg.
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
# `pi_agent_rust` (the pi SDK) is consumed *directly* — no smith. Default
# features (wasmtime / jemalloc / sqlite / clipboard) are dropped: the oracle
# only needs the provider layer + its async runtime, and dropping them keeps the
# workspace build tractable.
pi = { package = "pi_agent_rust", version = "=0.1.13", default-features = false }
# The SDK's async runtime. Used to drive `Provider::stream` to completion,
# exactly as the SDK's own provider tests do. Pinned to the version the SDK
# pins; `tls-native-roots` matches the SDK's own feature selection.
asupersync = { version = "=0.3.1", default-features = false, features = ["tls-native-roots"] }
futures = "0.3"
# Builds the synthetic (unsigned) Codex OAuth bearer the offline test needs.
base64 = "0.22"
# Pin a transitive dep of `asupersync`. asupersync 0.3.1 requires
# `franken-decision = "0.3.1"` (a caret range), but 0.3.2 broke a field on
# `DecisionOutcome` that asupersync 0.3.1 reads directly, so the caret default
# (0.3.2) fails to compile. Force the last compatible version here so the lock
# is reproducible from a clean checkout. Remove if/when asupersync ships a fix.
franken-decision = "=0.3.1"
