[package]
name = "jig-record"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Passthrough recorder: capture real client ↔ backend interactions to redacted, client/role-tagged fixtures"

[dependencies]
jig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "net", "io-util", "sync", "macros"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26"

[dev-dependencies]
tempfile = "3"
# The manual `capture` example (online; not part of `cargo test`) accepts client
# connections concurrently, so it needs the multi-threaded tokio runtime on top
# of the library's lean feature set.
tokio = { workspace = true, features = ["rt-multi-thread"] }
