[package]
name = "jig-record"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Passthrough recorder: capture real client ↔ backend interactions to redacted, client/role-tagged fixtures"

[dependencies]
jig-core.workspace = true
jig-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
# The upstream leg is HTTPS; trust the same Mozilla webpki root set the old
# tokio-rustls + webpki-roots pair used.
skein = { workspace = true, features = ["tls", "tls-webpki-roots"] }

[dev-dependencies]
tempfile = "3"
