[package]
name = "jig-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Embeddable fake-LLM service API (single-threaded skein runtime on its own thread)"

[dependencies]
jig-core.workspace = true
jig-runtime.workspace = true
serde_json.workspace = true
skein.workspace = true
