[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Developer task runner: orchestrates `jig record` fixture refreshes and reports fixture staleness"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
jig-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
